--- a/tbx/gui/mkdocs.yml
+++ b/tbx/gui/mkdocs.yml
@@ -49,6 +49,10 @@ markdown_extensions:
   footnotes: {}
   pymdownx.arithmatex:
       generic: true
+  pymdownx.tabbed:
+      alternate_style: true
+  def_list: {}
+
 
 extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
