Refactored; fixed threshold

--- a/tbx/gui/forms/module/mapping.json
+++ b/tbx/gui/forms/module/mapping.json
@@ -16,10 +16,10 @@
   "NormalWishart": "base",
   "Ordinary": "base",
   "RandomInertiaSV": "base",
-  "Threshold": "base",
   "DynamicCrossPanel": "cross",
   "StaticCrossPanel": "cross",
   "HierarchicalPanel": "separable",
   "MeanOLSPanel": "separable",
-  "NormalWishartPanel": "separable"
+  "NormalWishartPanel": "separable",
+  "Threshold": "threshold"
 }
