--- a/tbx/gui/forms/module/mapping.json
+++ b/tbx/gui/forms/module/mapping.json
@@ -11,7 +11,6 @@
   "IndNormalWishart": "base",
   "LargeShockSV": "base",
   "Minnesota": "base",
-  "MixedFrequency": "base",
   "NormalDiffuse": "base",
   "NormalWishart": "base",
   "Ordinary": "base",
@@ -21,5 +20,6 @@
   "HierarchicalPanel": "separable",
   "MeanOLSPanel": "separable",
   "NormalWishartPanel": "separable",
-  "Threshold": "threshold"
+  "Threshold": "threshold",
+  "MixedFrequency": "mixed"
 }
